--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZGL</title>
+    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
-    <canvas></canvas>
-    <script type="module" src="/src/main.ts"></script>
+    <canvas id="c"></canvas>
+    <script type="module" src="src/main.ts"></script>
   </body>
 </html>
