--- a/index.html
+++ b/index.html
@@ -5,10 +5,53 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZGL</title>
-    <link rel="stylesheet" href="src/style.css" />
+    <!-- <link rel="stylesheet" href="src/style.css" /> -->
+    <link rel="stylesheet" href="demos/style.css" />
   </head>
   <body>
-    <canvas id="c"></canvas>
-    <script type="module" src="src/main.ts"></script>
+    <!-- <script type="module" src="src/main.ts"></script>
+    <canvas id="c"></canvas> -->
+    <script type="module" src="demos/main.ts"></script>
+    <details id="panel" open>
+      <summary>
+        <a href="https://github.com/google/swissgl">SwissGL</a> demos
+      </summary>
+      <div id="cards"></div>
+    </details>
+    <div id="demo">
+      <canvas id="c" width="640" height="360"></canvas>
+      <div id="buttons">
+        <button title="VR" onclick="toggleVR()" id="vrButton">VR</button>
+        <button title="AR" onclick="toggleAR()" id="arButton">AR</button>
+        <button
+          title="settings"
+          onclick="toggleGui()"
+          id="settingButton"
+          style="font-size: 180%"
+        >
+          ⛯
+        </button>
+        <button title="source code">
+          <a id="sourceLink" href="" target="_blank">&lt;&gt;</a>
+        </button>
+        <button title="fullscreen" onclick="fullscreen()">⛶</button>
+      </div>
+    </div>
+    <button title="about" id="aboutButton" onclick="showAbout()">?</button>
+    <div id="about">
+      <p>
+        <a href="https://github.com/google/swissgl"><b>SwissGL</b></a>
+        is a prototype of a minimal yet expressive GPU library built on WebGL2.
+        A single <nobr>"glsl()"</nobr> function runs GLSL code snippets on the
+        GPU and manages the resulting texture buffers.
+      </p>
+      <p>
+        This page contains a few demos built using the library. Click the
+        <nobr>"&lt;&gt;"</nobr> button to see the source of the current example.
+      </p>
+      <button style="font-size: 20px; margin: auto" onclick="hideAbout()">
+        hide
+      </button>
+    </div>
   </body>
 </html>
