Simplify main demo class to top-level code

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <!-- <script type="module" src="src/main.ts"></script>
     <canvas id="c"></canvas> -->
     <script type="module" src="demos/main.ts"></script>
-    <details id="panel" open>
+    <details id="p" open>
       <summary>
         <a href="https://github.com/google/swissgl">SwissGL</a> demos
       </summary>
       <div id="cards"></div>
     </details>
-    <div id="demo">
+    <div id="d">
       <canvas id="c" width="640" height="360"></canvas>
       <div id="buttons">
         <button title="VR" onclick="toggleVR()" id="vrButton">VR</button>
