--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZGL</title>
-    <!-- <link rel="stylesheet" href="src/style.css" /> -->
-    <link rel="stylesheet" href="demos/style.css" />
+    <link rel="stylesheet" href="src/style.css" />
+    <!-- <link rel="stylesheet" href="demos/style.css" /> -->
   </head>
   <body>
-    <!-- <script type="module" src="src/main.ts"></script>
-    <canvas id="c"></canvas> -->
-    <script type="module" src="demos/main.ts"></script>
+    <script type="module" src="src/main.ts"></script>
+    <canvas id="c"></canvas>
+    <!-- <script type="module" src="demos/main.ts"></script>
     <details id="p" open>
       <summary>
         <a href="https://github.com/google/swissgl">SwissGL</a> demos
@@ -53,6 +53,6 @@
         hide
       </button>
     </div>
-    <div id="lil"></div>
+    <div id="lil"></div> -->
   </body>
 </html>
